# zeroid

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .mailmap  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  foundry.toml  hardhat.config.ts  jest.config.js  junit.xml  lighthouserc.js  next.config.js  package-lock.json  package.json  security_best_practices_report.md  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
sdk/python/: .coverage  pyproject.toml
sdk/python/tests/: conftest.py  test_compliance_engine.py  test_compliance_jurisdiction.py  test_compliance_screening.py  test_credential_issuer.py  test_credential_schema.py  test_credential_types.py  test_credential_verifier.py  test_crypto_accumulator.py  test_crypto_bbs.py  test_crypto_hashing.py  test_did_document.py  test_did_method.py  test_did_resolver.py  test_registry_client.py  test_registry_types.py  test_risk_features.py  test_risk_model.py  test_risk_scorer.py  test_tee_attestation.py  test_tee_types.py
sdk/python/zeroid/: __init__.py
sdk/python/zeroid/compliance/: __init__.py  engine.py  jurisdiction.py  screening.py
sdk/python/zeroid/credential/: __init__.py  issuer.py  schema.py  types.py  verifier.py
sdk/python/zeroid/crypto/: __init__.py  accumulator.py  bbs.py  hashing.py
sdk/python/zeroid/did/: __init__.py  document.py  method.py  resolver.py
sdk/python/zeroid/registry/: __init__.py  client.py  types.py
sdk/python/zeroid/risk/: __init__.py  features.py  model.py  scorer.py
sdk/python/zeroid/tee/: __init__.py  attestation.py  types.py
(+375 files in other folders)
