[project]
name = "zeroid-sdk"
version = "0.1.0"
description = "Python SDK for ZeroID — self-sovereign identity on the Aethelred blockchain"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=zeroid --cov-report=term-missing --cov-branch"
